--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
       <section id="acercade">
         <h2>Acerca de mí</h2>
         <p>
-          Artista con experiencia en música, danza, administración de empresas y periodismo, combinando pasión por el arte con habilidades empresariales y comunicativas.
+          Artista con experiencia en música, danza, administración de empresas y
+          periodismo, combinando pasión por el arte con habilidades
+          empresariales y comunicativas.
         </p>
       </section>
       <section id="habilidades">
@@ -33,36 +35,45 @@
           <li>CSS</li>
         </ol>
       </section>
+      <section id="proyectos">
+        <h2>Proycectos</h2>
+        <ol>
+          <li>Micro emprendimientos agropecuarios (2023)</li>
+          <p>Establecer una pequeña empresa dedicada a la producción y comercialización de hortalizas, aprovechando los recursos naturales y las técnicas de horticultura sostenible para generar ingresos y promover la conservación del medio ambiente</p>
+        </ol>
+      </section>
       <section id="experiencia">
         <h2>Experiencia</h2>
         <ol>
           <li>Profesora Elemental de Música (2022)</li>
-          <p>
-            Profesora de conceptos básicos de la música.
-          </p>
+          <p>Profesora de conceptos básicos de la música.</p>
           <li>Periodista (Actualidad)</li>
           <p>Técnico en informática.</p>
         </ol>
       </section>
-    
+
       <section id="contacto">
         <h2>Contacto</h2>
-        <p>Teléfono: <a href="tel:+595984534642">+595 984 534642</a></p>
+        <p>
+          Teléfono: <a class="link" href="tel:+595984534642">+595 984 534642</a>
+        </p>
         <p>
           E-Mail:
-          <a href="mailto:saravenialgo45@gmail.com"
+          <a class="link" href="mailto:saravenialgo45@gmail.com"
             >saravenialgo45@gmail.com</a
           >
         </p>
         <p>
           Instagram:
-          <a
-            href="https://www.instagram.com/sara_venialgo/"
+          <a class="link" href="https://www.instagram.com/sara_venialgo/"
             >@sara_venialgo</a
           >
         </p>
         <p>
-          Github: <a href="https://github.com/SaraVenialg0">SaraVenialg0</a>
+          Github:
+          <a class="link" href="https://github.com/SaraVenialg0"
+            >SaraVenialg0</a
+          >
         </p>
       </section>
     </main>
